# helix-hub-agents

./: CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSING.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  railway.json  requirements-test.txt  requirements.txt
docs/: API_REFERENCE.md  CLI.md  DEPLOYMENT.md  PERFORMANCE.md  QUICKSTART.md  index.html
examples/: 01_basic_orchestration.py  advanced_configuration.py  helix_integration.py
helix_agent_orchestration/: __main__.py  cli.py
src/helix_orchestration/: __init__.py
src/helix_orchestration/agents/: __init__.py  agent_access.py  agent_embeds.py  agent_orchestrator.py  agent_personality_profiles.py  agent_profiles.py  agents_base.py  agents_loop.py  agents_service.py  enhanced_agents.py  memory_root.py  verify_blueprints.py
src/helix_orchestration/communication/: __init__.py  messaging.py
src/helix_orchestration/coordination/: __init__.py  aether_core.py  affective_intelligence.py  agni_core.py  aria_core.py  arjuna_core.py  atlas_core.py  code_guardian.py  coordination_hub.py  coordination_integration.py  coordination_visualizer.py  echo_core.py  gemini_core.py  helix_coordination_core.py  iris_core.py  kael_core.py  kavach_core.py  lumina_core.py  mandelbrot_ucf.py  mitra_core.py  nexus_core.py  nova_core.py  oracle_core.py  performance_analytics.py  performance_analytics_engine.py  phoenix_core.py  sage_core.py  sanghacore_core.py  shadow_core.py  surya_core.py  system_core.py  system_integration.py  titan_core.py  ucf_coordination_framework.py  ucf_protocol.py  ucf_state_loader.py  ucf_tracker.py  varuna_core.py  vega_core.py
src/helix_orchestration/monitoring/: __init__.py  metrics.py
src/helix_orchestration/ucf_framework/: __init__.py  adapter.py  metrics.py  store.py
src/helix_orchestration/workflows/: __init__.py  templates.py
tests/: conftest.py  test_agent_orchestrator.py
